# 002-simple-redis

./: Cargo.toml  README.md  cliff.toml  deny.toml
read_me/: ReadMe2.md
src/: lib.rs  main.rs
src/resp/: decode.rs  encode.rs  mod.rs
