[package]
name = "simple-redis"
version = "0.1.0"
edition = "2021"
license = "MIT"       # 添加这一行
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["Qfish007 <506175003@qq.com>"]
[dependencies]
anyhow = "1.0.100"
bytes = "1.6.0"
enum_dispatch = "0.3.13"
thiserror = "1.0.58"
